--- a/iindex.html
+++ b/iindex.html
@@ -4,10 +4,201 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="" type="image/">
-    <title>Document</title>
-</head>
-<body>
-    
+    <link rel="shortcut icon" href="./logos/icons8-favicon-32.png" type="image/">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <title >Influencer-gear</title>
+</head> 
+<body class="poppins-regular">
+    <!-- nav section -->
+     <nav class="primary_margin">
+         <i class="fa-solid fa-bars bars"></i>
+        <h1 class="primary_text_color">Influencer products </h1>
+        <div class="nav_list">
+            <ul class="nav_list">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Sign Up</a></li>
+            <li><a href="#">Log In </a></li>
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <i class="fa-solid fa-cart-shopping "></i>
+         </ul>
+        </div>
+     </nav>
+ <!-- banner section -->
+     <section class="banner">
+      <div class="banner_info">
+        <h1>Start your Journey as <br>
+            Influencer</h1>
+        <p class="primary_text_color">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br> vestibulum sed scelerisque eros. Lectus faucibus.</p>
+        <button class="primary_btn"> Preebook now  <i class="fa-solid fa-arrow-right"></i></button>
+      </div>
+      <div class="banner_img">
+       <img src="./images/main-camera.png" alt="">
+      </div>
+     </section>
+
+<!-- sponsers section -->
+ <section class="sponsers">
+     <img src="./logos/Amazon.svg" alt="">
+     <img src="./logos/Daraz.pk Logo.svg" alt="">
+    <img src="./logos/Alibaba.svg" alt="">
+     <img src="./logos/Ebay.svg" alt="">
+     <img src="./logos/Rakuten.svg" alt="">
+     <img src="./logos/Target.svg" alt="">
+     <img src="./logos/Walmart.svg" alt="">
+ </section>
+
+ <!-- collection section -->
+  <section class="collection">
+  <h1 class="primary h1">Popular Collection</h1>
+  <div class="card_section">
+    <div class="card">
+        <img src="./images/camera.png" alt="">
+        <h3>Vlogging Camera</h3>
+        <p class="primary_para_style">$1800.80</p>
+        <div class="feedback">
+            <img src="./logos/icons8-star-16.png" alt="">
+             <img src="./logos/icons8-star-16.png" alt="">
+              <img src="./logos/icons8-star-16.png" alt="">
+               <img src="./logos/icons8-star-16.png" alt="">
+                <img src="./logos/icons8-star-half-16.png" alt=""><span cl>4.99</span>
+        </div>
+        <p class="primary_para_style">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque est optio praesentium deserunt minima quis ipsam eligendi. Temporibus, iusto voluptatem!</p>
+
+    </div>
+     <div class="card">
+        <img src="./images/airpod.png" alt="">
+        <h3>Airpods huge</h3>
+        <p class="primary_para_style">$800.80</p>
+        <div class="feedback">
+            <img src="./logos/icons8-star-16.png" alt="">
+             <img src="./logos/icons8-star-16.png" alt="">
+              <img src="./logos/icons8-star-16.png" alt="">
+               <img src="./logos/icons8-star-16.png" alt="">
+                <img src="./logos/icons8-star-half-16.png" alt=""><span cl>4.99</span>
+        </div>
+        <p class="primary_para_style">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque est optio praesentium deserunt minima quis ipsam eligendi. Temporibus, iusto voluptatem!</p>
+
+    </div>
+     <div class="card">
+        <img src="./images/mic.png" alt="">
+        <h3>Standered mic</h3>
+        <p class="primary_para_style">$900</p>
+        <div class="feedback">
+            <img src="./logos/icons8-star-16.png" alt="">
+             <img src="./logos/icons8-star-16.png" alt="">
+              <img src="./logos/icons8-star-16.png" alt="">
+               <img src="./logos/icons8-star-16.png" alt=""><span cl>4.99</span>
+        </div>
+        <p class="primary_para_style">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque est optio praesentium deserunt minima quis ipsam eligendi. Temporibus, iusto voluptatem!</p>
+
+    </div>
+     <div class="card">
+        <img src="./images/drone.png" alt="">
+        <h3>Best Drone</h3>
+        <p class="primary_para_style">$6800.80</p>
+        <div class="feedback">
+            <img src="./logos/icons8-star-16.png" alt="">
+             <img src="./logos/icons8-star-16.png" alt="">
+              <img src="./logos/icons8-star-16.png" alt="">
+               <img src="./logos/icons8-star-16.png" alt="">
+                <img src="./logos/icons8-star-half-16.png" alt=""><span cl>4.99</span>
+        </div>
+        <p class="primary_para_style">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque est optio praesentium deserunt minima quis ipsam eligendi. Temporibus, iusto voluptatem!</p>
+
+    </div>
+     <div class="card">
+        <img src="./images/single-light.png" alt="">
+        <h3>single-light</h3>
+        <p class="primary_para_style">$400</p>
+        <div class="feedback">
+            <img src="./logos/icons8-star-16.png" alt="">
+             <img src="./logos/icons8-star-16.png" alt="">
+              <img src="./logos/icons8-star-16.png" alt="">
+               <img src="./logos/icons8-star-16.png" alt="">
+                <img src="./logos/icons8-star-half-16.png" alt=""><span cl>4.99</span>
+        </div>
+        <p class="primary_para_style">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque est optio praesentium deserunt minima quis ipsam eligendi. Temporibus, iusto voluptatem!</p>
+
+    </div>
+     <div class="card">
+        <img src="./images/lights.png" alt="">
+        <h3>Lights powerfull</h3>
+        <p class="primary_para_style">$500.10</p>
+        <div class="feedback">
+            <img src="./logos/icons8-star-16.png" alt="">
+             <img src="./logos/icons8-star-16.png" alt="">
+              <img src="./logos/icons8-star-16.png" alt="">
+               <img src="./logos/icons8-star-16.png" alt="">
+                <img src="./logos/icons8-star-16.png" alt=""><span cl>5.00</span>
+        </div>
+        <p class="primary_para_style">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque est optio praesentium deserunt minima quis ipsam eligendi. Temporibus, iusto voluptatem!</p>
+
+    </div>
+     <div class="card">
+        <img src="./images/setup.png" alt="">
+        <h3>Wow setup</h3>
+        <p class="primary_para_style">$1800.80</p>
+        <div class="feedback">
+            <img src="./logos/icons8-star-16.png" alt="">
+             <img src="./logos/icons8-star-16.png" alt="">
+              <img src="./logos/icons8-star-16.png" alt="">
+               <img src="./logos/icons8-star-16.png" alt="">
+                <img src="./logos/icons8-star-half-16.png" alt=""><span cl>4.99</span>
+        </div>
+        <p class="primary_para_style">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque est optio praesentium deserunt minima quis ipsam eligendi. Temporibus, iusto voluptatem!</p>
+
+    </div>
+     <div class="card">
+        <img src="./images/tripod.png" alt="">
+        <h3>Tripod</h3>
+        <p class="primary_para_style">$1100.50</p>
+        <div class="feedback">
+            <img src="./logos/icons8-star-16.png" alt="">
+             <img src="./logos/icons8-star-16.png" alt="">
+              <img src="./logos/icons8-star-16.png" alt="">
+               <img src="./logos/icons8-star-16.png" alt="">
+                <img src="./logos/icons8-star-half-16.png" alt=""><span cl>4.99</span>
+        </div>
+        <p class="primary_para_style">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque est optio praesentium deserunt minima quis ipsam eligendi. Temporibus, iusto voluptatem!</p>
+
+    </div>
+     <div class="card">
+        <img src="./images/action.png" alt="">
+        <h3>Vlogging Camera</h3>
+        <p class="primary_para_style">$1800.80</p>
+        <div class="feedback">
+            <img src="./logos/icons8-star-16.png" alt="">
+             <img src="./logos/icons8-star-16.png" alt="">
+              <img src="./logos/icons8-star-16.png" alt="">
+               <img src="./logos/icons8-star-16.png" alt="">
+                <img src="./logos/icons8-star-half-16.png" alt=""><span cl>4.99</span>
+        </div>
+        <p class="primary_para_style">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque est optio praesentium deserunt minima quis ipsam eligendi. Temporibus, iusto voluptatem!</p>
+
+    </div>
+  </div>
+     <div class="seemore">
+       <button class="primary_btn">
+        See more  <i class="fa-solid fa-arrow-right"></i>
+       </button>
+     </div>
+  
+</section>
+
+<!-- featured section -->
+  <section class="featured">
+    <div class="featured_img"><img src="./images/gear.png" alt=""></div>
+
+    <div class="featured_info">
+        <h1 class="">Featured products at one place</h1>
+        <p class="primary_para_style">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+         <button class="primary_btn">
+        Join Now  <i class="fa-solid fa-arrow-right"></i>
+       </button>
+    </div>
+  </section>
+  
+  <!--  -->
 </body>
 </html>
