--- a/iindex.html
+++ b/iindex.html
@@ -198,7 +198,18 @@
        </button>
     </div>
   </section>
-  
-  <!--  -->
+
+  <!-- footer -->
+   <footer>
+    <h1 class="primary h1">Influencer products</h1>
+    <p>Copyright © 2020  influencer products</p>
+    <p>All rights reserved</p>
+    <div class="logo">
+     <a href=""><i class="fa-brands fa-instagram"></i></a>
+     <a href=""> <i class="fa-brands fa-square-youtube"></i></a>
+     <a href=""><i class="fa-brands fa-square-twitter"></i></a>
+     <a href=""><i class="fa-brands fa-edge"></i></a>
+    </div>
+   </footer>
 </body>
 </html>
